# rag-practice

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.specify/: feature.json
.specify/memory/: constitution.md
backend/: main.py
backend/api/: chat.py  documents.py
backend/models/: database.py  document.py
backend/services/: bm25_indexer.py  chunker.py  embedder.py  extractor.py  file_watcher.py  generator.py  indexer.py  pipeline.py  query_expander.py  reranker.py  retriever.py
backend/tests/: test_upload_api.py
evaluation/: BASELINE.md  eval_set.json  run_eval.py
evaluation/results/: final.json  v0_baseline.json  v1_ensemble.json  v2_multiquery.json
frontend/: app.py
scripts/: add_annotation_columns.py  migrate_sqlite_to_postgres.py
specs/001-pdf-rag-chat-webapp/: spec.md
specs/001-pdf-rag-chat-webapp/checklists/: requirements.md
specs/001-pdf-rag-chat-webapp/plan/: data-model.md  pipeline.md  quickstart.md  research.md  tasks.md
specs/002-postgres-local-db/: spec.md
specs/002-postgres-local-db/checklists/: requirements.md
specs/002-postgres-local-db/plan/: data-model.md  quickstart.md  research.md  tasks.md
specs/003-pdf-edit-reindex/: spec.md
specs/003-pdf-edit-reindex/checklists/: requirements.md
specs/003-pdf-edit-reindex/contracts/: reindex-api.md
specs/003-pdf-edit-reindex/plan/: data-model.md  plan.md  research.md  tasks.md
specs/004-annotation-types-table/: spec.md
specs/004-annotation-types-table/checklists/: requirements.md
(+5 files in other folders)
